Done: Added `Gender` field Done: RecyclerView Animation Done: Input Validations

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,9 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:tabSelectedTextColor="@color/deep_orange"
+            app:tabTextColor="#6a3a00">
 
         </com.google.android.material.tabs.TabLayout>
 
