--- a/app/src/main/res/layout/popup_add_list.xml
+++ b/app/src/main/res/layout/popup_add_list.xml
@@ -15,13 +15,15 @@
             android:layout_height="wrap_content"
             app:boxCornerRadiusTopEnd="15dp"
             app:boxCornerRadiusTopStart="15dp"
-            app:startIconDrawable="@drawable/baseline_person_4_24">
+            app:startIconDrawable="@drawable/baseline_person_4_24"
+            app:startIconTint="@color/deep_orange">
             <EditText
                 android:id="@+id/addList_edtxt_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Name"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:backgroundTint="#22FF8C00"/>
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
@@ -35,17 +37,20 @@
             android:layout_height="wrap_content"
             app:boxCornerRadiusTopEnd="15dp"
             app:boxCornerRadiusTopStart="15dp"
-            app:startIconDrawable="@drawable/baseline_calendar_month_24">
+            app:startIconDrawable="@drawable/baseline_calendar_month_24"
+            app:startIconTint="@color/deep_orange">
             <EditText
                 android:id="@+id/addList_edtxt_age"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Age"
-                android:singleLine="true" />
+                android:inputType="number"
+                android:singleLine="true"
+                android:backgroundTint="#22FF8C00" />
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
-    <!--    AGE    -->
+    <!--    D.O.B    -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -55,14 +60,48 @@
             android:layout_height="wrap_content"
             app:boxCornerRadiusTopEnd="15dp"
             app:boxCornerRadiusTopStart="15dp"
-            app:startIconDrawable="@drawable/baseline_calendar_today_24">
+            app:startIconDrawable="@drawable/baseline_calendar_today_24"
+            app:startIconTint="@color/deep_orange">
             <EditText
                 android:id="@+id/addList_edtxt_dob"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="D.O.B"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:backgroundTint="#22FF8C00" />
         </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+
+    <!--  GENDER  -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical"
+        android:paddingLeft="17dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Gender"/>
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <com.google.android.material.radiobutton.MaterialRadioButton
+                android:id="@+id/rBtn_male"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Male"
+                android:buttonTint="@color/deep_orange"/>
+            <com.google.android.material.radiobutton.MaterialRadioButton
+                android:id="@+id/rBtn_female"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Female"
+                android:buttonTint="@color/deep_orange"/>
+        </RadioGroup>
     </LinearLayout>
 
     <!--  SAVE  -->
