--- a/app/src/main/res/layout/single_view_note.xml
+++ b/app/src/main/res/layout/single_view_note.xml
@@ -1,25 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="3dp"
-    android:elevation="2dp"
-    android:padding="2dp">
+    android:elevation="4dp">
 
-    <TextView
-        android:id="@+id/txt_userName"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:layout_centerVertical="true"/>
+        android:layout_margin="3dp"
+        android:padding="5dp">
 
-    <ImageButton
-        android:id="@+id/imgB_delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/baseline_delete_24"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="2dp"/>
+        <TextView
+            android:id="@+id/txt_userName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18dp"
+            android:layout_centerVertical="true"/>
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/txt_userAge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18dp"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/txt_userGender"
+            android:layout_marginRight="10dp"/>
+
+        <TextView
+            android:id="@+id/txt_userGender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18dp"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/imgB_delete"
+            android:layout_marginRight="10dp"/>
+
+        <ImageButton
+            android:id="@+id/imgB_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_delete_24"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="2dp"
+            android:backgroundTint="@color/white"/>
+
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
